--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo-google-fonts/dev": "^0.2.2",
     "@expo-google-fonts/fredoka-one": "^0.2.2",
     "@expo-google-fonts/lexend": "^0.2.2",
     "@expo-google-fonts/nunito": "^0.2.2",
     "@expo-google-fonts/poppins": "^0.2.2",
+    "@expo-google-fonts/roboto": "^0.2.2",
     "@expo-google-fonts/rubik": "^0.2.2",
     "@expo-google-fonts/varela-round": "^0.2.2",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
@@ -29,13 +29,16 @@
     "expo-app-loading": "~1.3.0",
     "expo-checkbox": "~2.0.0",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-image-slider-box": "^1.1.20",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "0.29.4",
     "react-native-reanimated": "~2.3.1",
@@ -45,8 +48,7 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
-    "rn-keyboard-avoider": "^1.0.8",
-    "expo-image-picker": "~12.0.1"
+    "rn-keyboard-avoider": "^1.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
