--- a/package.json
+++ b/package.json
@@ -27,20 +27,27 @@
     "@react-navigation/stack": "^6.1.1",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
+    "expo-application": "~4.0.1",
+    "expo-auth-session": "~3.5.0",
     "expo-checkbox": "~2.0.0",
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.3",
+    "expo-random": "~12.1.1",
     "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.6",
+    "expo-updates": "~0.11.7",
+    "expo-web-browser": "~10.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-collapsible": "^1.6.0",
+    "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-slider-box": "^1.1.20",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "0.29.4",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
