--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@expo-google-fonts/varela-round": "^0.2.2",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.2.0",
-    "@react-navigation/drawer": "^6.3.1",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
@@ -40,13 +41,17 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-native-awesome-alerts": "^1.5.2",
     "react-native-collapsible": "^1.6.0",
     "react-native-dotenv": "^3.3.1",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-slider-box": "^1.1.20",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "0.29.4",
+    "react-native-paper": "^4.12.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
@@ -55,7 +60,11 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
-    "rn-keyboard-avoider": "^1.0.8"
+    "rn-keyboard-avoider": "^1.0.8",
+    "sharingan-rn-modal-dropdown": "^1.4.0",
+    "stream-chat-expo": "^4.4.0",
+    "expo-blur": "~11.0.0",
+    "@react-native-masked-view/masked-view": "0.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
