--- a/package.json
+++ b/package.json
@@ -17,57 +17,63 @@
     "@expo-google-fonts/roboto": "^0.2.2",
     "@expo-google-fonts/rubik": "^0.2.2",
     "@expo-google-fonts/varela-round": "^0.2.2",
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
-    "expo": "~44.0.0",
-    "expo-app-loading": "~1.3.0",
-    "expo-application": "~4.0.1",
-    "expo-auth-session": "~3.5.0",
-    "expo-checkbox": "~2.0.0",
-    "expo-font": "~10.0.4",
-    "expo-image-picker": "~12.0.1",
-    "expo-linear-gradient": "~11.0.3",
-    "expo-random": "~12.1.1",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.7",
-    "expo-web-browser": "~10.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "@stripe/stripe-react-native": "0.6.1",
+    "expo": "^45.0.0",
+    "expo-app-loading": "~2.0.0",
+    "expo-application": "~4.1.0",
+    "expo-auth-session": "~3.6.1",
+    "expo-blur": "~11.1.0",
+    "expo-checkbox": "~2.1.0",
+    "expo-font": "~10.1.0",
+    "expo-image-picker": "~13.1.1",
+    "expo-linear-gradient": "~11.3.0",
+    "expo-random": "~12.2.0",
+    "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
+    "expo-web-browser": "~10.2.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-awesome-alerts": "^1.5.2",
     "react-native-collapsible": "^1.6.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-dropdown-picker": "^5.4.2",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-slider-box": "^1.1.20",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-maps": "0.29.4",
+    "react-native-maps": "0.30.2",
     "react-native-paper": "^4.12.1",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-skeleton-content": "^1.0.24",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
+    "react-native-svg": "12.3.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-web": "0.17.7",
     "react-redux": "^7.2.6",
     "rn-keyboard-avoider": "^1.0.8",
     "sharingan-rn-modal-dropdown": "^1.4.0",
-    "stream-chat-expo": "^4.4.0",
-    "expo-blur": "~11.0.0",
-    "@react-native-masked-view/masked-view": "0.2.6"
+    "stream-chat-expo": "^4.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "typescript": "~4.3.5",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6"
   },
   "private": true
 }
